# RenderEngine

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  imgui.ini  make.ps1  vcpkg.json
3rdlibs/: CMakeLists.txt  findlibrary.cmake
3rdlibs/hps/: CMakeLists.txt  lib.7z
3rdlibs/hps/include/: hoops_license.h  hps.h  sprk.h  sprk_ops.h
3rdlibs/nlohmann-json/: CMakeLists.txt
3rdlibs/qt/: findqt.cmake
3rdlibs/spdlog/: CMakeLists.txt  lib.7z
3rdlibs/toml++/: CMakeLists.txt
3rdlibs/vcpkg/: findvcpkg.cmake
assets/shaders/: shader.frag  shader.vert
cmake/: CMakeLists.txt  addtarget.cmake  clangformat.cmake  clangtidy.cmake  copydll.cmake  copyfile.cmake  deploy.cmake  generatepath.cmake  sanitizer.cmake  windeployqt.cmake
demo/: CMakeLists.txt  run.ps1
demo/include/: sample.h  sample_common.h
demo/src/: bloom_silhouette.cpp  conditional_styles_and_includes.cpp  custom_event.cpp  database_search.cpp  hardcopy_export.cpp  hidden_line.cpp  hidden_line_advanced.cpp  highlighting.cpp  image_background.cpp  image_io.cpp  image_output.cpp  insert_cube.cpp  interpolation.cpp  lightweight_subwindow.cpp  mask_transforms.cpp  meshes.cpp  priority.cpp  quickmoves.cpp  reference_geometry.cpp  render_modes.cpp  sample.cpp  sample_common.cpp  sample_main.cpp  segment_attributes.cpp  select_by_point.cpp  selection.cpp  shell_attributes.cpp  spotlight.cpp  sub_shell_attributes.cpp  textures.cpp
renderengine/: CMakeLists.txt  config.h.in
renderengine/include/renderengine/: port.hpp  renderengine.hpp  types.hpp
renderengine/src/: main.cpp  port.cpp  renderengine.cpp
src/: CMakeLists.txt
src/RenderEngine/: CMakeLists.txt
src/RenderEngine/src/: main.cpp
src/StandardCodeLibrary/: CMakeLists.txt
src/StandardCodeLibrary/include/scl/: log.hpp  singleton.hpp  time.hpp  timer.hpp
src/StandardCodeLibrary/src/: scl.cpp  time.cpp  timer.cpp
src/tmp/: CMakeLists.txt  main.cpp
